--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav id="leo-nav" class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target="#menu-collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
