--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LEO, LLC - Boostrap</title>
+    <title>FOOD, LLC - Boostrap</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="#" class="text-left navbar-brand">
-                        <h1>LEO, LLC</h1>
+                        <h1>FOOD, LLC</h1>
                     </a>
                 </div><!-- /.nav-header -->
                 <div id="menu-collapsable-nav" class="collapse navbar-collapse">
